# FVM2D_py

./: CMakeLists.txt  FMV2D.py
cases/caseBL/: analisys.py  analisys2.py  convergence.csv  friction.csv  frictionBLfluent  geometry.geo  geometry.msh  mesh.su2  restart.csv  restart0.csv  solution.csv
cases/caseBL_turb/: analisys.py  analisys2.py  convergence.csv  friction.csv  frictionBLfluentRef  frictionBLref500x20  geometry.geo  mesh.su2  reestartROE.csv  restart.csv  solution.csv  velocityBLfluent
cases/caseChannel/: analisys.py  convergence.csv  geometry.geo  mesh.su2  restart.csv  solution.csv
cases/caseCylinder/: analisys.py  convergence.csv  mesh.su2  restart.csv  solution.csv
cases/caseCylinderAxi/: analisys.py  checkMesh.py  convergence.csv  geometry.geo  mesh.su2  restart.csv  solution.csv
cases/caseDiamond/: analisys.py  convergence.csv  geometry.geo  mesh.su2  reestart.csv  restart.csv  solution.csv
cases/caseNACA0012/: analisys.py  convergence.csv  friction.csv  geometry.geo  mesh.su2  restart.csv  solution.csv
cases/caseSod/: geometry.geo  mesh.su2  solution.csv
cases/caseSodRef/: analisys.py  analisys2.py  geometry.geo  mesh.su2  reestart.csv  solution.csv  solution1.csv  solution2.csv  su2MeshReader.py
cases/caseWedge/: analisys.py  convergence.csv  restart.csv  solution.csv
cases/caseWedgeAxi/: analisys.py  geometry.geo  mesh.su2  solution.csv
src/: boundary.c  boundary.h  flux.c  flux.h  input.c  input.h  main.c  mesh.c  mesh.h  readTables.c  readTables.h  sa.c  sa.h  solver.c  solver.h  utils.c  utils.h
(+8 files in other folders)
